Fixing runat='server' to double quotes due to SFMC critical issue removing script blocks in Code Resources

--- a/docs/ssjs/ssjs-snippet-ampscript-in-ssjs.mdx
+++ b/docs/ssjs/ssjs-snippet-ampscript-in-ssjs.mdx
@@ -43,7 +43,7 @@ function ampScript(code) {
 
 As we are using `Variable.GetValue` here, you will need to import Salesforce Marketing Cloud SSJS Core library at the top of your script.
 
-Just add `Platform.Load('core', '1')` right after `<script runat=server>` and you are good to go!
+Just add `Platform.Load('core', '1')` right after `<script runat="server">` and you are good to go!
 
 :::
 
