--- a/docs/ssjs/ssjs-snippet-ssjs-script-template.mdx
+++ b/docs/ssjs/ssjs-snippet-ssjs-script-template.mdx
@@ -16,7 +16,7 @@ Some like to start with a blank slate. Some - from a well-crafted template. I'm 
 ## SSJS Template Code
 
 ```html
-<script runat='server'>
+<script runat="server">
     /* -------------------------------------------------------------------------
 
     Short description of the purpose of the script.
