--- a/docs/usecase/sfmc-cloud-page-apps.mdx
+++ b/docs/usecase/sfmc-cloud-page-apps.mdx
@@ -278,7 +278,7 @@ By considering all the above, we get a robust and secure template for our Cloud 
 <TabItem value='ssjs'>
 
 ```js title="Full Cloud Page App Template"
-<script runat='server'>
+<script runat="server">
     /* -------------------------------------------------------------------------
 
     Authenticates each visitor to limit access only to SFMC logged-in users.
