--- a/docs/js/js-dom.mdx
+++ b/docs/js/js-dom.mdx
@@ -32,7 +32,9 @@ JavaScript lets you capture specific parts of your website and make them accessi
 - __querySelector__: returns an element with a matching CSS3 selector (for example `document.querySelector('#mainContent .hiddenContent h2')`)
 - __querySelectorAll__: returns a collection of elements matching CSS3 selector (for example `document.querySelectorAll('#attributes-repeater .DataCell tr')`)
 
-As you can see, there are a lot of options you can leverage. Which one is right for the job?
+As you can see, there are a lot of options you can leverage.
+
+#### Should you use getElement or querySelector?
 
 The rule of thumb is that if one of the `getElement` selectors can do the job, it's better choice due to optimised performance (the longer HTML, the bigger difference). However, for more complex selections it might either be better or even the only possible choice to use the newer `querySelector` family.
 
@@ -56,5 +58,31 @@ So my approach is to use the more flexible and readable `querySelector` whenever
 
 :::note You Should Know
 
-variable assignment and reuse
+You can assign your DOM selection to a variable. It not only allow you to reuse it in multiple places of your script, but also let's you limit the scope of the selection.
+
+You can do the latter by replacing the `document` object with your variable - it will look for matching DOM elements only within the outcome of the previous seletion.
+
+```js
+const form = document.querySelector('form');
+const divsInForm = form.querySelectorAll('div'); // Returns only div tags within your form
+```
+
+It works like chaining selectors and with the same limitation - you can chain only if previous outcome is single element.
+
+```js
+/* ✅ Chain from a single element to a collection - same outcome as previous code snippet */
+document.querySelector('form').querySelectorAll('div');
+
+/* ❌ Chain from a collection to a collection - will throw TypeError */
+document.querySelectorAll('form').querySelectorAll('div');
+
+/* ✅ Chain from a single element (thank you, index) to a collection - same outcome as previous code snippet */
+document.querySelectorAll('form')[0].querySelectorAll('div');
+```
+
 :::
+
+#### How to use getElements and querySelectors?
+
+
+
