Fixed data type in _Bounce System Data View

--- a/docs/config/sfmc-config-system-data-views.mdx
+++ b/docs/config/sfmc-config-system-data-views.mdx
@@ -501,7 +501,7 @@ BounceType | The type of bounce that occurred | Text | X
 SMTPBounceReason | The reason for the bounce relayed by the mail system | Text | X
 SMTPMessage | The message regarding the bounce from the mail system | Text | X
 SMTPCode | The error code for the bounce from the mail system | Number | X
-TriggererSendDefinitionObjectID | The object ID for the triggered send definition | Number | X
+TriggererSendDefinitionObjectID | The object ID for the triggered send definition | Text | X
 TriggeredSendCustomerKey | The customer key for the triggered send | Text | X
 
 </TabItem>
