Updated information around Send Log and Datorama Reports Features on Demand

--- a/docs/config/sfmc-config-features-on-demand.mdx
+++ b/docs/config/sfmc-config-features-on-demand.mdx
@@ -54,7 +54,7 @@ Feature Name | Description | Documentation | Type
 Sender Authentication Package | SAP is a collection of products including Private Domain with link and image wrapping (unique for SAP), Dedicated IP, and Reply Mail Management. Must-have. | [SAP](https://help.salesforce.com/articleView?id=sf.mc_es_sap.htm&type=5) | Paid
 Additional Dedicated IP | You can purchase additional dedicated IPs to manage more significant volumes or split communication types. | [Dedicated IP](https://help.salesforce.com/articleView?id=sf.mc_es_dedicated_ip.htm&type=5) | Paid
 Additional Private Domain | You can purchase additional private domains to differentiate various communication types. This feature does not cover link and image branding. | [Private Domains](https://help.salesforce.com/articleView?id=000318538&type=1&mode=1) | Paid
-SSL | Secures your traffic and gives that sweet `HTTPS`, a must-have nowadays. | [SSL Certificate](https://help.salesforce.com/articleView?id=000339842&type=1&mode=1) | Paid
+SSL | Secures your traffic and gives that sweet `HTTPS`, a must-have nowadays. Once purchased, configuration is now self-serve in SFMC Setup.| [SSL Certificate](https://help.salesforce.com/articleView?id=000339842&type=1&mode=1) | Paid
 Reputation Audit Test | Ad hoc request allows you to receive information about the current state of the blacklists, authentication, DNS and content reviews (spam assessment) for your dedicated IPs. | [Reputation Audit](https://docs.google.com/presentation/d/1TGDkSRWC-fB0vU7UjuP_18mgty6G_JHrDc2Anbmvi8Q/edit#slide=id.g863e745c9f_0_3842) | Free
 Reputation Audit Account | \[__Temporarily restricted__\] Allows you to receive a dedicated account to Reputation Audit tool so that you can check the state of your dedicated IPs without creating recurring Reputation Audit Test requests. | [Reputation Audit](https://docs.google.com/presentation/d/1TGDkSRWC-fB0vU7UjuP_18mgty6G_JHrDc2Anbmvi8Q/edit#slide=id.g863e745c9f_0_3842) | Free
 Bounce Detective | Sends email alerts when recent send has an elevated bounce rate at any domain with 25+ recipients and provides per-domain bounce-focused analysis. | N/A | Free
@@ -67,7 +67,7 @@ MTA Email Throttle | Apart from Email Studio Throttle feature focused on control
 Feature Name | Description | Documentation | Type
 -- | -- | -- | --
 CAN-SPAM Compliance Check | Marketing Cloud by default requires you to be compliant with US CAN-SPAM regulation by enforcing Commercial / Transactional split of messages and requiring specific data to be available in the email footer. If you are sending to non-US recipients, you can ask to switch off that requirement | [CAN-SPAM Compliance](https://help.salesforce.com/articleView?id=sf.mc_es_can_spam_requirements.htm&type=5) | Free
-Email Send Log | Allows you to log send-time data about your emails. Requires two features: Send Log Data Extension Template and Business Rule on the backend of SFMC to populate Data Extension based on this template. If your Send Log doesn't work, you probably miss the Business Rule. Ask for both. | [Send Logging in Email Studio](https://help.salesforce.com/articleView?id=sf.mc_es_send_logging.htm&type=5) | Free
+Email Send Log | Allows you to log send-time data about your emails. Requires two features: Send Log Data Extension Template and Business Rule on the backend of SFMC to populate Data Extension based on this template. If your Send Log doesn't work, you probably miss the Business Rule (it can be set to Blank, _AUTO or ENT._AUTO depending on whether you want Send Log to ignore errors, capture Business Unit sends or all Account sends respectively). Ask for both. | [Send Logging in Email Studio](https://help.salesforce.com/articleView?id=sf.mc_es_send_logging.htm&type=5) | Free
 Auto-Suppression List | Allows you to suppress Contacts from receiving any Emails from the whole instance or specific classification and Business Unit. No need to attach to each send as with standard Suppression Lists. | [Auto-Suppression Lists](https://help.salesforce.com/articleView?id=sf.mc_es_auto_suppresion_lists.htm&type=5) | Free
 Exclusion Scripts | Allows you to define custom exclusion logic evaluated at send time using AMPScript. If possible, use segmentation, suppression and auto-suppression lists due to performance reasons, but in some cases, Exclusion Script might be the only way. There is also a matching feature for Journey Builder Emails. Ask for both. | [Email Studio Exclusion Scripts](https://help.salesforce.com/articleView?id=000339899&type=1&mode=1) | Free
 Custom List Detective | Allows you to block sending and subscribing all contacts with specified Email Address username (for example `admin@`) or domain (for example `@competitor.com`). Custom rules are applied for all current and future Business Units. | [Custom List Detective](https://help.salesforce.com/articleView?id=000316767&type=1&mode=1) | Free
@@ -92,8 +92,7 @@ Push Send Log | Allows you to log send-time data about your push notifications. 
 
 Feature Name | Description | Documentation | Type
 -- | -- | -- | --
-Send Time Attributes in a Discover Report | Allows you to add up to 15 Send Time Attributes to the Discover Reports (similar to Send log feature) | [Discover Sent Time Attributes](https://help.salesforce.com/articleView?id=sf.mc_di_send_time_attributes.htm&type=5) | Paid
-Datorama Reports | Allows you to create new complex reports using templates that leverage measures and attributes. Replaced the Discover Reporting Tool. | [Discover Reporting Tool](https://help.salesforce.com/articleView?id=sf.mc_di_discover.htm&type=5) | Paid
+Datorama Reports Advanced | Allows you to customize and create dashboards, add dimensions and measurements, track cross-channel engagement and query the data. Replaced the Discover Reporting Tool. | [Datorama Reports Advanced](hhttps://trailhead.salesforce.com/en/content/learn/modules/datorama-reports-advanced-in-marketing-cloud/get-to-know-datorama-reports-advanced) | Paid
 Custom Reports | Allows you to request creating a new Report aligned with your needs. | N/A | Paid
 Account Utilisation Report | Ad hoc request to get the current utilisation status of Super Messages. | N/A | Free
 
