Removed Interaction Studio tag

--- a/docs/config/sfmc-config-features-on-demand.mdx
+++ b/docs/config/sfmc-config-features-on-demand.mdx
@@ -4,7 +4,7 @@ title: SFMC Features On Demand
 sidebar_label: Features On Demand
 description: Discover the Salesforce Marketing Cloud Features On Demand and unlock platform potential.
 image: img/og/og-image-sfmc-features-on-demand.png
-tags: [Marketing Cloud, Configuration, Deliverability, Email, Mobile, Analytics, Interaction Studio, Journey, Automation, Data Extensions, Setup]
+tags: [Marketing Cloud, Configuration, Deliverability, Email, Mobile, Analytics, Journey, Automation, Data Extensions, Setup]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
