Updated draft of JS DOM article

--- a/docs/js/js-dom.mdx
+++ b/docs/js/js-dom.mdx
@@ -4,7 +4,7 @@ title: JS Document Object Model
 sidebar_label: DOM
 description: WIP
 image: img/og/og-image-js-dom.png
-tags: [JavaScript]
+tags: [JavaScript, Cloud Page, Personalisation]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
@@ -15,11 +15,11 @@ import { LeadText } from '../../src/components/LeadText.js';
 
 The Document Object Model (DOM) represents the structure of a web document and serves as its programming interface. In simpler words, it let's JavaScript talk with the HTML of the page. And that is huge, especially in Marketing Automation world.
 
-Why? Because it let's you manipulate your website in many ways - visible and not. Dynamic forms adapting to selections, real-time restructring of the pages and data capture. All that is possible thanks to DOM. So let's dive into details.
+Why? Because it let's you manipulate your website in many ways - visible and not. Dynamic forms adapting to user actions, pages changing in real time and enhanced data capture. All that is possible thanks to DOM. So let's dive into details.
 
 ## Accessing the DOM
 
-To start working with Document Object Model in JavaScript, you just need to use one of the special objects - `window` (browser tab) or `document` (page within that tab). Each of those objects offer multitude of methods that let you interact with a webpage.
+To start working with Document Object Model in JavaScript, you need to use one of the special objects - `window` (browser tab) or `document` (page within that tab). Each of those objects offer multitude of methods that let you interact with a webpage.
 
 JavaScript lets you capture specific parts of your website and make them accessible for all your scripting needs with the help of `document` object methods:
 
@@ -29,6 +29,38 @@ JavaScript lets you capture specific parts of your website and make them accessi
 - __getElementsByClassName__: returns a collection of tags with matching class (for example, all tags with class `document.getElementByClassName('hiddenContent')`)
 - __querySelector__: returns an element with a matching CSS3 selector (for example `document.querySelector('#mainContent .hiddenContent h2')` - notice the `#` prefix for id and `.` for a class). If there are multiple matching elements - it will return the first one.
 - __querySelectorAll__: returns a collection of elements matching CSS3 selector (for example `document.querySelectorAll('#attributes-repeater .DataCell tr')`)
+
+:::note You Should Know
+
+`querySelector` and `querySelectorAll` allows you to select elements using the power of CSS3. It means that you can go really specific with he right syntax.
+
+You can select:
+1. Tag by its name: `document.querySelector('body')`
+2. Id with `#` prefix: `document.querySelector('#idName')`
+3. Class with `.` prefix: `document.querySelector('.className')`
+4. Tag with specific class by chaining: `document.querySelector('div.className')`
+5. Element with two classes: `document.querySelector('.className1.className2')` (notice lack of space between classes)
+6. Element that is direct child of another element: `document.querySelector('div > h2')`
+7. Element that is any child another element: `document.querySelector('div h2')`
+8. Element that is any sibling (has the same parent): `document.querySelector('p.className ~ h2')` (this will capture `h2` that is under the same parent as `p.className`)
+9. Element that is adjecent sibling (has the same parent): `document.querySelector('p.className + h2')` (this will capture `h2` that is under the same parent as `p.className` and after that paragraph)
+10. Element with specific attribute: `document.querySelector('[href]')`
+11. Element with specific value of attribute: `document.querySelector('input[type="checkbox"]')`
+12. One of the listed elements: `document.querySelector('ul, ol')`
+13. All of the listed elements: `document.querySelectorAll('ul, ol')`
+14. Elements targetet by [pseudo-class](https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-classes): `document.querySelectorAll('a:visited')`
+15. [Pseudo-element](https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-elements): `document.querySelectorAll('h1::first-letter')`
+16. Element with negated selection: `document.querySelector('.className:not(div)')`
+
+Sky is the limit, especially with chaining all of the above into single super query:
+
+```js
+document.querySelector('#content > article > div:nth-child(20) a:nth-child(1) > code');
+```
+
+However, whenever possible, optimise. Either by finding a better way to select the element or (if possible) by adding easily selectable attribute to that element in the page HTML.
+
+:::
 
 As you can see, there are a lot of options you can leverage.
 
@@ -99,13 +131,13 @@ document.querySelector('#content').attributes;              // returns a Map wit
 document.querySelector('#content').attributes.class.value;  // returns 'main-content'
 ```
 
-While it is great way of learning what attributes are used on a specific elements, in most scenarios the attribute-specific shorthands will be much more useful.
+While it is great way of learning what attributes are used on a specific elements, in most scenarios the attribute-specific shorthand properties will be much more useful.
 
 ### .classList and .className
 
-The `.classList` property let's you directly list all classes assigned to the selected element (in a form of DOMTokenList). It is great when you want to [loop](./js-loops.mdx) through to find a specific class or when you want to [manipulate the DOM](#manipulating-the-dom).
+The `.classList` property let's you directly list all classes assigned to the selected element (in a form of DOMTokenList). It is great when you want to [loop](./js-loops.mdx) through to find a specific class or [manipulate the DOM](#manipulating-the-dom).
 
-On the other hand, when you want to do a simple check or condition, `.className` is a great shorthand returning a string with all the classes.
+On the other hand, when you want to do a simple [check or condition](./js-if-and-switch.mdx), `.className` is a great shorthand returning a string with all classes.
 
 ```js
 /* <div class="page-wrapper category-api document-page">…</div> */
